force-app/main/default/objects/Atividade__c/Atividade__c.object-meta.xml
<CustomObject>
    <label>Atividade</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Atividades</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>