force-app/main/default/objects/Atividade__c/fields/Coluna__c.field-meta.xml
<CustomField>
    <fullName>Coluna__c</fullName>
    <label>Coluna</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lista de Entrega</fullName>
            </value>
            <value>
                <fullName>Sprint</fullName>
            </value>
            <value>
                <fullName>Executando</fullName>
            </value>
            <value>
                <fullName>Paralisado</fullName>
            </value>
            <value>
                <fullName>Concluído</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>