force-app/main/default/objects/Atividade__c/fields/Departamento__c.field-meta.xml
<CustomField>
    <fullName>Departamento__c</fullName>
    <label>Departamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrativo</fullName>
            </value>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Comitê de Operações</fullName>
            </value>
            <value>
                <fullName>Comitê Estratégico</fullName>
            </value>
            <value>
                <fullName>Compras</fullName>
            </value>
            <value>
                <fullName>Desenvolvimento</fullName>
            </value>
            <value>
                <fullName>Diretoria</fullName>
            </value>
            <value>
                <fullName>Financeiro</fullName>
            </value>
            <value>
                <fullName>Gestcom</fullName>
            </value>
            <value>
                <fullName>Governo</fullName>
            </value>
            <value>
                <fullName>Health Solutions</fullName>
            </value>
            <value>
                <fullName>Izu</fullName>
            </value>
            <value>
                <fullName>Logística</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Qualidade</fullName>
            </value>
            <value>
                <fullName>Recursos Humanos</fullName>
            </value>
            <value>
                <fullName>Serviço</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>