force-app/main/default/objects/Atividade__c/fields/Evento__c.field-meta.xml
<CustomField>
    <fullName>Evento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evento</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Scrum</relationshipLabel>
    <relationshipName>Atividades</relationshipName>
    <type>Lookup</type>
</CustomField>