force-app/main/default/objects/Atividade__c/fields/Prazo__c.field-meta.xml
<CustomField>
    <fullName>Prazo__c</fullName>
    <label>Prazo</label>
    <type>Date</type>
</CustomField>