force-app/main/default/objects/Atividade__c/listViews/Todos_os_Cart_es.listView-meta.xml
<ListView>
    <fullName>Todos_os_Cart_es</fullName>
    <columns>NAME</columns>
    <columns>Descricao__c</columns>
    <columns>Departamento__c</columns>
    <columns>Inicio__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos os Cartões</label>
</ListView>