force-app/main/default/objects/Atividade__c/listViews/X1_Lista_de_Entrega.listView-meta.xml
<ListView>
    <fullName>X1_Lista_de_Entrega</fullName>
    <columns>NAME</columns>
    <columns>Descricao__c</columns>
    <columns>Coluna__c</columns>
    <columns>Departamento__c</columns>
    <columns>Prioridade__c</columns>
    <columns>Inicio__c</columns>
    <columns>Prazo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Coluna__c</field>
        <operation>equals</operation>
        <value>Lista de Entrega</value>
    </filters>
    <label>1 - Lista de Entrega</label>
</ListView>