force-app/main/default/objects/Atividade__c/listViews/X4_Paralisado.listView-meta.xml
<ListView>
    <fullName>X4_Paralisado</fullName>
    <columns>NAME</columns>
    <columns>Descricao__c</columns>
    <columns>Coluna__c</columns>
    <columns>Departamento__c</columns>
    <columns>Prioridade__c</columns>
    <columns>Inicio__c</columns>
    <columns>Prazo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Coluna__c</field>
        <operation>equals</operation>
        <value>Paralisado</value>
    </filters>
    <label>4 - Paralisado</label>
</ListView>